--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -23,8 +24,9 @@ a:hover {
 }
 
 body {
+  background-color: #535bf2;
   margin: 0;
-  display: flex;
+ 
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -94,3 +96,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
