--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  background-color: #ea89e5;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -24,7 +25,7 @@ a:hover {
 }
 
 body {
-  background-color: #535bf2;
+  
   margin: 0;
  
   place-items: center;
@@ -96,4 +97,18 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+img{
+  display: block;
+  max-width: 100%;
+  height:auto;
 
+ }
+
+ main{
+  display: grid;
+  flex-direction: column;
+  grid-template-columns: repeat(12, 1fr);
+ 
+
+ }
+ 
