--- a/style.scss
+++ b/style.scss
@@ -3,11 +3,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background-color: #ea89e5;
+  background-color: #fad2f8;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  
+  color: rgba(242, 22, 22, 0.87);
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -114,7 +114,7 @@ button:focus-visible {
   display: grid;
   flex-direction: column;
   grid-template-columns: repeat(12, 1fr);
-  background-color:#63f9e5;
+  background-color:#bbfaf9;
   
  }
  #chipsesContainer{
